samples/_failures_safe/1761345801_1c212b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b9715e4.c: In function ‘main’:
./samples/SAFE/__tmp_6b9715e4.c:148:5: error: expected declaration or statement at end of input
  148 |     if (strcmp(input, "ALL") == 0) {
      |     ^~
./samples/SAFE/__tmp_6b9715e4.c:148:5: error: expected declaration or statement at end of input
